--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ canvas {
                 <div class="input-wrapper">
                     <select id="templateType">
                         <option value="classic">Standard Layout</option>
-                        <option value="poy">Person of Year</option>
+                        <option value="poy">Person of the Year</option>
                         <option value="t100">TIME 100</option>
                     </select>
                 </div>
