--- a/tate.html
+++ b/tate.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title></title>
   <style>
     html, body {
       margin: 0;
@@ -18,13 +18,13 @@
       width: 100vw;
       height: 100vh;
       object-fit: cover;
-      pointer-events: none; /* disables interaction */
+      pointer-events: none;
     }
   </style>
 </head>
 <body>
-  <video autoplay muted loop playsinline>
-    <source src="https://pixeldrain.com/api/file/vq6vM1QE" type="video/mp4">
+  <video autoplay muted loop playsinline preload="auto">
+    <source src="https://pixeldrain.com/api/file/vq6vM1QE?download" type="video/mp4">
   </video>
 </body>
 </html>
