--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             overlay.className = 'video-overlay';
 
             const video = document.createElement('video');
-            video.src = 'https://github.com/mcraves/timeproject/releases/download/TATE/20.Just.Keep.Watching.m4v';
+            video.src = 'https://mcraves.github.io/timeproject/8f4f23580d93b4f7848c8ee0b73b2c.mp4';
             video.autoplay = true;
             video.controls = false;
             video.playsInline = true;
